--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ait-adb",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Android Debug Bridge interface",
   "main": "./build/index.js",
   "scripts": {
@@ -45,9 +45,9 @@
   ],
   "dependencies": {
     "adbkit-apkreader": "^3.1.2",
-    "ait-async": "lastest",
-    "ait-process": "lastest",
-    "armor-support": "lastest",
+    "ait-async": "*",
+    "ait-process": "*",
+    "armor-support": "*",
     "async-lock": "^1.0.0",
     "bluebird": "^3.4.7",
     "glob": "^7.1.2",
